<?xml version="1.0"?>
<package format="3">
  <name>rviz_tool_path_display</name>
  <version>0.1.1</version>
  <description>The rviz_tool_path_display package</description>

  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>
  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>pluginlib</depend>
  <depend>qtbase5-dev</depend>
  <depend>libqt5-widgets</depend>
  <depend>geometry_msgs</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
