<?xml version="1.0"?>
<package format="3">
  <name>rviz_tool_path_display</name>
  <version>0.2.1</version>
  <description>The rviz_tool_path_display package</description>

  <maintainer email="michael.ripperger@swri.org">Michael Ripperger</maintainer>
  <author email="michael.ripperger@swri.org">Michael Ripperger</author>
  <license>Apache 2.0</license>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>
  <depend>rclcpp</depend>
  <depend>rviz2</depend>
  <depend>rviz_common</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>rviz_rendering</depend>
  <depend>rviz_default_plugins</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
